--- a/mobile-app-ws/src/main/resources/application.properties
+++ b/mobile-app-ws/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#server port change
+server.port=9865
 
+#MySQL DB setup
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/mobile-app-ws
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.dialect=org.hibernate.dialect.MySQL57Dialect
